little corrections
