# storage/api-docs/api-docs.json
@@ -301,6 +301,17 @@
                 "summary": "Get a student",
                 "description": "Get a student with his/her reg_number",
                 "operationId": "getAStudent",
+                "parameters": [
+                    {
+                        "name": "reg_number",
+                        "in": "path",
+                        "description": "The registration number of the student",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Successful response",
@@ -351,7 +362,7 @@
                         "description": "Search query",
                         "required": true,
                         "schema": {
-                            "type": "text"
+                            "type": "string"
                         }
                     },
                     {
